--- a/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -417,6 +417,7 @@ footer .tooltip p:first-of-type {
     text-transform: uppercase;
     height: 60px;
     margin-bottom: 15px;
+    position: relative;
 }
 
 .title {
@@ -562,8 +563,27 @@ ul.params {
     padding-bottom: 20px;
 }
 
+/* Grafana */
+.grafana iframe {
+    width: 100%;
+    height: 79vh;
+    border: 1px solid #f0f0f1;
+}
 
+ul.selector {
+    display: inline-block;
+    right: 0;
+    top: 50%;
+    list-style: none;
+    position: absolute;
+}
 
+ul.selector li {
+    display: inline-block;
+    margin-right: 10px;
+}
 
-
-
+.selector .router-link-exact-active {
+    font-weight: bold;
+    border-bottom: 1px solid var(--blue);
+}
