--- a/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -6,15 +6,15 @@ article,aside,details,figcaption,figure,footer,header,hgroup,hr,menu,nav,section
 
 /* General */
 :root {
-	--blue: #00ADB5;
-	--green: #00F900;
-	--red: #FF2600;
-	--gray1: #F0F0F1;
-	--gray2: #D3D3D6;
-	--gray3: #A6A7AE;
-	--gray4: #7A7B85;
-	--gray5: #4D4F5C;
-	--black: #020E14;
+    --blue: #00ADB5;
+    --green: #00F900;
+    --red: #FF2600;
+    --gray1: #F0F0F1;
+    --gray2: #D3D3D6;
+    --gray3: #A6A7AE;
+    --gray4: #7A7B85;
+    --gray5: #4D4F5C;
+    --black: #020E14;
 
 }
 
@@ -55,9 +55,9 @@ body, html {
     line-height: 1.2;
     color: var(--gray5);
     overflow-x:hidden;
-	-webkit-font-smoothing: subpixel-antialiased;
-	-moz-osx-font-smoothing: subpixel-antialiased;
-	font-smoothing: subpixel-antialiased;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: subpixel-antialiased;
+    font-smoothing: subpixel-antialiased;
 }
 
 body.noscroll, html.noscroll {
@@ -69,7 +69,7 @@ main {
 }
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -88,13 +88,73 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-	color: var(--blue);
-	text-decoration: none;
+    color: var(--blue);
+    text-decoration: none;
 }
 
 strong {
     font-weight: 600;
 }
+
+/* Loader */
+#loader {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    right: 10px;
+    top: 5px;
+    border-radius: 100%;
+    background: url("img/loader.gif") center center no-repeat;
+    background-size: 80px;
+}
+
+/*#loader:before, #loader:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  filter: drop-shadow(0 0 10px rgba(0, 173, 181, 0.75));
+}
+#loader:before {
+  width: 10px;
+  padding-bottom: 10px;
+  box-shadow: inset 0 0 0 5px #00ADB5;
+  animation-name: pulsA;
+}
+#loader:after {
+  width: 8px;
+  padding-bottom: 8px;
+  box-shadow: 0 0 0 0 #00ADB5;
+  animation-name: pulsB;
+}
+
+@keyframes pulsA {
+  0% {
+    box-shadow: inset 0 0 0 1px #00ADB5;
+    opacity: 1;
+  }
+  50%, 100% {
+    box-shadow: inset 0 0 0 0 #00ADB5;
+    opacity: 0;
+  }
+}
+@keyframes pulsB {
+  0%, 50% {
+    box-shadow: 0 0 0 0 #00ADB5;
+    opacity: 0;
+  }
+  100% {
+    box-shadow: 0 0 0 1px #00ADB5;
+    opacity: 1;
+  }
+}*/
 
 /* Main Structure */
 aside {
@@ -120,7 +180,7 @@ aside {
 
 #main {
     margin-left: 310px;
-	float: left;
+    float: left;
     width: calc(100% - 310px);
     display: block;
     min-height: 100vh;
@@ -192,7 +252,7 @@ aside {
 }
 
 #sets h4 {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 #sets h3:before {
@@ -211,7 +271,7 @@ aside {
 }
 
 #sets > .hide h3:before {
-	transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 #sets .item {
@@ -332,8 +392,12 @@ footer {
     display: none;
 }
 
+#notifications .count.zero {
+    display: none;
+}
+
 #notifications.active .count {
-	display: block;
+    display: block;
 }
 
 .tooltip {
@@ -348,7 +412,7 @@ footer {
 }
 
 .tooltip.show {
-	display: block;
+    display: block;
 }
 
 #nav:not(.disabled) .top .tooltip {
@@ -372,20 +436,25 @@ footer {
 }
 
 .tooltip.pos1 {
-	margin-top: -170px;
+    margin-top: -170px;
 }
 
 .tooltip.pos2 {
-	margin-top: -110px;
+    margin-top: -110px;
 }
 
 .tooltip.pos3 {
-	margin-top: -50px;
+    margin-top: -50px;
 }
 
 footer .tooltip p {
-    margin: 15px 0;
+    padding: 10px 0;
     line-height: 1.3;
+    border-top: 1px solid var(--gray2);
+}
+
+footer .tooltip p:first-of-type {
+    border: 0;
 }
 
 .help .tooltip {
@@ -405,11 +474,15 @@ footer .tooltip p {
 #notifications hr {
     width: calc(100% + 40px);
     margin-left: -20px;
+    margin-bottom: 0;
 }
 
-footer .tooltip p:first-of-type {
+footer .tooltip span {
     font-size: .8rem;
     color: var(--gray3);
+    display: block;
+    line-height: 1;
+    margin: 10px 0;
 }
 
 /* Main Container */
