ui: added backups

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -823,6 +823,10 @@ ul.params .params li {
     padding-bottom: 20px;
 }
 
+.backups .box {
+    padding-bottom: 20px;
+}
+
 /* Grafana */
 .grafana iframe {
     width: 100%;
