fix: added missing params to backup listing

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -807,7 +807,7 @@ li.status {
     position: initial;
 }
 
-.box .table .head + .row {
+.box .table .head + .row, .box.show > .row {
     border-bottom: 0;
 }
 
