feat: enable notification messages on new cluster creation

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -639,6 +639,10 @@ footer .tooltip p {
     bottom: 20px;
 }
 
+#notifications.active .tooltip {
+    display: block !important;
+}
+
 #notifications hr {
     width: 100%;
     margin-bottom: 0;
