edit: enable vertical scroll on sidebar when all elements are expanded

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -434,6 +434,11 @@ ul.zg-ul-select.active li.active:hover {
     height: calc(100vh - 175px);
 }
 
+#sets.expanded {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .set {
     border-bottom: 1px solid rgba(211, 211, 211, .3);
     height: auto;
