fix: set camel-case on form labels

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -1286,7 +1286,7 @@ ul.selector li {
 }
 
 .form label {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: var(--gray4);
     margin-bottom: 2px;
 }
