--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -1350,6 +1350,10 @@ label.switch {
     text-align: left;
 }
 
+.switch input:focus:not(:checked) {
+    border-color: var(--gray3);
+}
+
 .switch input:after {
     text-transform: uppercase;
     content: "OFF";
