--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -1420,7 +1420,7 @@ label.switch {
     cursor: pointer;
 }
 
-.form button + button, .form .btn + button {
+.form button + button, .form .btn + button, .btn + .btn, button + .btn {
     margin-left: 10px;
 }
 
